# llm-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  conftest.py  pyproject.toml
docs/plans/: 2025-11-20-llm-experiment-platform-design.md  2025-11-20-llm-experiment-platform-mvp.md
platform/: __init__.py
platform/api/: dependencies.py  main.py
platform/api/routes/: auth.py
platform/api/schemas/: auth.py
platform/core/: config.py  database.py  security.py
platform/migrations/: env.py
platform/models/: evaluation_run.py  experiment.py  job.py  prompt_repository.py  provider_config.py  user.py
platform/providers/: base.py  factory.py  openai_provider.py  pricing.py
platform/services/: experiment_service.py  tracking_service.py
tests/integration/: test_api.py  test_auth_api.py
tests/unit/: test_experiment_service.py  test_openai_provider.py  test_tracking_service.py
